fixed issue where link is too small to cover logo in header

--- a/css/free.css
+++ b/css/free.css
@@ -1,5 +1,4 @@
 h1.logo {
-	text-indent: -9999px;
 	background: url("../images/logo-inverted.png") no-repeat top left;
 	background-size: cover;
 	height: 101px;
